--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -18,6 +18,7 @@ RUN ls -l ./build
 
 FROM nginx:alpine
 COPY --from=build-env ./build/web /usr/share/nginx/html
+RUN ls -l /usr/share/nginx/html
 
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
