--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       context: ./prob
       dockerfile: Dockerfile
     container_name: nginx
-    volumes:
-      - /etc/nginx/conf.d/dobu.conf:/etc/nginx/conf.d/default.conf
+    # volumes:
+    #   - /etc/nginx/conf.d/dobu.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
     networks:
