--- a/prob/Dockerfile
+++ b/prob/Dockerfile
@@ -8,6 +8,8 @@ RUN chown -R flutteruser:flutteruser /sdks/flutter
 # RUN chown -R flutteruser:flutteruser /code
 
 COPY . /code
+RUN ls -l .
+RUN ls -l /code
 RUN chown -R flutteruser:flutteruser /code
 
 USER flutteruser
