--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Build and Push Docker image
         run: |
-          docker-compose -f docker-compose.yml build 
+          docker-compose -f docker-compose.yml build --no-cache
           docker-compose -f docker-compose.yml push
           
       # 배포
